Add default value for type as well.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@ Changelog
 
 1.0.4 (unreleased)
 ------------------
-- Add default value for title, description and format [ivanteoh]
+- Add default value for title, description, type and format as if Dublin Core metadata is turned on [ivanteoh]
 
 1.0.3 (09-October-2014)
 ------------------
