--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 Changelog
 =========
 
-1.0.4 (unreleased)
-------------------
+1.0.4 (23-April-2015)
+---------------------
 - Add default value for title, description, type and format as if Dublin Core metadata is turned on [ivanteoh]
 
 1.0.3 (09-October-2014)
